# Smart-Door-Lock-with-Face-Recognition

./: .gitignore  Cargo.toml  ReadMe.md  arduino code for esp32_cam video_server
src/: main.rs
