[package]
name = "smart-door-aws"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = "1.0"
aws-sdk-rekognition = "1.0"

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
bytes = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenvy = "0.15"

# HTTP client (for ESP32-CAM communication)
reqwest = { version = "0.11", features = ["json", "multipart"] }